
2010-11-19 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinSlv.cpp,.h: even a new target equal to the previous one goes through the solver

2010-11-08 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinFwd.h: now iKinLimb is public inherited from iKinChain

2010-10-31 Ugo Pattacini <ugo.pattacini@iit.it>
	   * tutorials: names turned in something meaningful
           * iKinInv.cpp,.h: removed the q0 parameter

2010-10-30 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinSlv.h,.cpp: added the [ask] rpc command

2010-10-26 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iostream replaced by fprintf()

2010-07-09 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinFwd.h,.cpp: added alignJointsBounds methods

2010-06-01 Ugo Pattacini <ugo.pattacini@iit.it>
	   * Ported to iCub/main

2010-04-28 Ugo Pattacini <ugo.pattacini@iit.it>
	   * name convention of some protected methods changed
           * bug fix on iKinLink copy constructor

2010-03-23 Ugo Pattacini <ugo.pattacini@iit.it>
	   * CMakeLists.cmake, IKINConfig.cmake: now ADD_IPOPT flag is set by default according
	   to the status of IPOPT_FOUND variable

2010-02-27 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinSlv.h,.cpp: minimization against current q added
	   
2010-02-03 Ugo Pattacini <ugo.pattacini@iit.it>
	   * CMakeLists.txt, IKINConfig.cmake: for win32 DEBUG_POSTFIX put equal to "d"

2010-01-14 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinFwd.h,.cpp: provided Jacobians for generic ith link

2010-01-13 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinSlv.h,.cpp: rest position option extended

2010-01-12 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinSlv.h,.cpp: added options for torso rest positions
           bug fixes for continuous mode

2009-12-20 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinFwd.h,.cpp: iKinLimb class extended with new methods
           for creating limb from a list of links properties

2009-12-18 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinFwd.h,.cpp: iCubInertialSensor class added
